--- a/index.html
+++ b/index.html
@@ -54,10 +54,11 @@
         <input id="country-input" class="form-control me-2" type="search" placeholder="Search A Country" aria-label="Search">
       </form>
 
-
     <div class="container my-2" id="weather-container">
+        <div class="vh-50 d-flex justify-content-center align-items-center">
+            <span class="loader mx-auto"></span>
+        </div>
       </div>
-    
 <!-- 
 
     <div class="container">
